@@ -28,6 +28,7 @@
 ipmi_ctx_t ipmi_open (const char *progname,
                       const char *hostname,
                       struct common_cmd_args *common_args,
-                      pstdout_state_t pstate);
+                      pstdout_state_t pstate,
+                      unsigned int flags);
 
 #endif /* TOOL_COMMON_H */
